--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#6260AF</color>
-    <color name="primary_dark">#142232</color>
+    <color name="primary">#735095</color>
+    <color name="primary_dark">#e5e6fa</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
     <color name="white">#FFFFFF</color>
@@ -10,4 +10,5 @@
     <color name="error">#B00020</color>
     <color name="received_message_background">#090D16</color>
     <color name="green">#008000</color>
+    <color name="black">#000000</color>
 </resources>
